Using 'luadoc *' instead of 'luadoc .'

--- a/files/ox.core.html
+++ b/files/ox.core.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Reference</title>
-    <link rel="stylesheet" href="../../luadoc.css" type="text/css" />
+    <link rel="stylesheet" href="../luadoc.css" type="text/css" />
 	<!--meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/-->
 </head>
 
@@ -24,7 +24,7 @@
 <h1>LuaDoc</h1>
 <ul>
 	
-	<li><a href="../../index.html">Index</a></li>
+	<li><a href="../index.html">Index</a></li>
 	
 </ul>
 
@@ -38,7 +38,7 @@
 <h1>Files</h1>
 <ul>
 
-	<li><strong>./ox.core.lua</strong></li>
+	<li><strong>ox.core.lua</strong></li>
 	
 </ul>
 
@@ -51,7 +51,7 @@
 
 <div id="content">
 
-<h1>File <code>./ox.core.lua</code></h1>
+<h1>File <code>ox.core.lua</code></h1>
 
 
 
