--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <ul>
 
 	<li>
-		<a href="files/./ox.core.html">./ox.core.lua</a>
+		<a href="files/ox.core.html">ox.core.lua</a>
 	</li>
 
 </ul>
@@ -64,7 +64,7 @@
 <!--<tr><td colspan="2">Files</td></tr>-->
 
 	<tr>
-		<td class="name"><a href="files/./ox.core.html">./ox.core.lua</a></td>
+		<td class="name"><a href="files/ox.core.html">ox.core.lua</a></td>
 		<td class="summary"></td>
 	</tr>
 
